--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                                                             <tr>
                                                                 <td style="padding-bottom: 10px;">
                                                                     <p style="color: #2a78d0; font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
-                                                                        <b>•FY21 </b>
+                                                                        <b>• FY21 </b>
                                                                         Region Rising Star Partner
                                                                     </p>
                                                                 </td>
@@ -832,7 +832,7 @@
                                                             <tr>
                                                                 <td style="padding-bottom: 10px;">
                                                                     <p style="color: #2a78d0; font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
-                                                                        <b>•FY22 / FY23 </b>
+                                                                        <b>• FY22 / FY23 </b>
                                                                         Overall Partner of the year
                                                                     </p>
                                                                 </td>
@@ -840,7 +840,7 @@
                                                             <tr>
                                                                 <td style="padding-bottom: 10px;">
                                                                     <p style="color: #2a78d0; font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
-                                                                        <b>•FY23 </b>
+                                                                        <b>• FY23 </b>
                                                                         Customer Success Partner
                                                                     </p>
                                                                 </td>
@@ -848,7 +848,7 @@
                                                             <tr>
                                                                 <td style="padding-bottom: 10px;">
                                                                     <p style="color: #2a78d0; font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
-                                                                        <b>•FY24 / FY25 </b>
+                                                                        <b>• FY24 / FY25 </b>
                                                                         Sales Excellence Partner
                                                                     </p>
                                                                 </td>
@@ -888,6 +888,14 @@
                     <table cellspacing="0" cellpadding="0" border="0" style="width: 100%; border-collapse: collapse; margin: 0;">
                         <tr style="padding: 0; margin: 0;">
                             <td style="height: 10px; background: linear-gradient(to right, #00a1df, #5758c5, #8845e5);">
+                        </tr>
+
+                        <tr style="padding: 0; margin: 0;">
+                            <td>
+                                <a href="https://invite.salesforce.com/agentforce-world-tour_dubai/">
+                                    <img src="https://res.cloudinary.com/dregc275o/image/upload/v1745315577/Cloudzlab_Agentforce_Event_banner_1f1343f73a.jpg" style="max-width: 550px;">
+                                </a>
+                            </td>
                         </tr>
                     </table>
                 </td>
