--- a/index.html
+++ b/index.html
@@ -855,8 +855,11 @@
                                                             </tr>
                                                             <tr>
                                                                 <td style="padding-bottom: 10px;">
-                                                                    <p style="color: #2a78d0; font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
-                                                                        Read Cloudzlab 10 Years Story <a href="https://www.cloudzlab.com/blog/kjy19umj97i7ojhxevknp71k">Blog</a>
+                                                                    <p style="font-size: 12px; margin: 5px 0; font-family: Arial, sans-serif;">
+                                                                        <b>Read Cloudzlab 10 Years Story </b>
+                                                                        <a href="https://www.cloudzlab.com/blog/kjy19umj97i7ojhxevknp71k">
+                                                                            Blog
+                                                                        </a>
                                                                     </p>
                                                                 </td>
                                                             </tr>
@@ -891,7 +894,7 @@
                         </tr>
 
                         <tr style="padding: 0; margin: 0;">
-                            <td>
+                            <td style="padding-top: 10px">
                                 <a href="https://invite.salesforce.com/agentforce-world-tour_dubai/">
                                     <img src="https://res.cloudinary.com/dregc275o/image/upload/v1745315577/Cloudzlab_Agentforce_Event_banner_1f1343f73a.jpg" style="max-width: 550px;">
                                 </a>
